注册登录，个人信息及各模块初步框架